fix: add gap for contact section

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -236,7 +236,7 @@ footer h3 {
 .footer-bottom {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .footer-info {
@@ -257,6 +257,7 @@ footer h3 {
   "phone phone email"
   "time time location"
   ;
+  column-gap: 10px;
 }
 
 .footer-contact img {
